@@ -229,6 +229,7 @@ int main(int argc, const char** argv) {
   evql_conf_set(conf, "server.c2s_idle_timeout", "1800000000");
   evql_conf_set(conf, "server.s2s_io_timeout", "1000000");
   evql_conf_set(conf, "server.s2s_idle_timeout", "5000000");
+  evql_conf_set(conf, "server.http_io_timeout", "1000000");
   evql_conf_set(conf, "server.heartbeat_interval", "1000000");
   evql_conf_set(conf, "server.query_progress_rate_limit", "250000");
 
